2010-11-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/ChangeLog: moved to top-level enabling 'C-x 4 a' lookups

2010-11-19  Romain Francois <romain@r-enthusiasts.com>

	* src/Makevars: apply new recommended PKG_LIBS declaration

	* DESCRIPTION: removed SystemRequirements: GNU make

2010-07-29  Romain Francois <romain@r-enthusiasts.com>

	* src/RcppMatrixExample.cpp: disambiguate versions of sqrt

2010-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.1.1

	* TODO: Expanded noting need for additional documentation

2010-07-29  Romain Francois <romain@r-enthusiasts.com>

	* TODO: Added, noting need to emphasize new API

	* man/*: Minor edits noting that the classic API is not recommended
	for new code

2010-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Use LinkingTo: Rcpp
	* DESCRIPTION: Update Depends: on R and Rcpp to newer version

	* src/Makevars: Simplified thanks to 'LinkingTo: Rcpp'

2010-05-25  Romain Francois <romain@r-enthusiasts.com>

	* src/*.cpp: use BEGIN_RCPP/END_RCPP in new api examples and use
	List::create instead of Pairlist

	* src/Makevars.win: apply Brian Ripley's advice from R-devel thread
	to anticipate changes in R 2.12.0

2010-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.1.0 for the first CRAN upload

	* src/Makevars.win: Switch back from backticks to $(shell ...)
	  which should be fine as GNU make is mandated on Windows anyway

2010-03-07  Romain Francois <romain@r-enthusiasts.com>

	* src/RcppVectorExample.cpp: use a new vector for the output
	* src/RcppStringVectorExample.cpp: rework the new api version
	using the StringTransformer class (depends on Rcpp >= 0.7.7.15)

2010-03-04  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppMatrixExample.cpp: Added 'classic' + 'new' API examples
	* R/RcppMatrixExample.R: idem
	* src/RcppStringVectorExample.cpp: idem
	* R/RcppStringVectorExample.R: idem

2010-03-03  Dirk Eddelbuettel  <edd@dexter>
